--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,18 @@
 ---
 - name: put yarn-resourcemanager-{{ env_name }}.rb eye config file
   template: src=resourcemanager.rb dest=/etc/eye/yarn-resourcemanager-{{ env_name }}.rb owner=root group=root mode=0644
+  when: "not (ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04')"
 
 - name: load config in eye
   command: bash -c "source /usr/local/rvm/scripts/rvm && eye l /etc/eye/apps.eye"
-  sudo: yes
+  become: yes
+  when: "not (ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04')"
+
+- name: put systemd unit file to its destination
+  template: src=yarn-resourcemanager.service dest=/etc/systemd/system/yarn-resourcemanager-{{ env_name }}.service owner=root group=root mode=0644
+  when: "ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04'"
+  notify: systemctl daemon-reload
+
+- name: enable yarn-resourcemanager service
+  service: name=yarn-resourcemanager-{{ env_name }} enabled=yes state=started
+  when: "ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04'"
