--- a/templates/yarn-resourcemanager.service
+++ b/templates/yarn-resourcemanager.service
@@ -7,7 +7,7 @@ Environment=HADOOP_CLASSPATH=/opt/hadoop/lib/hadoop-lzo.jar
 Type=simple
 User={{ hadoop_user }}
 Group={{ hadoop_user }}
-ExecStart={{ hadoop_distr_prefix }}/bin/yarn resourcemanager
+ExecStart={{ hadoop_distr_prefix }}-{{ env_name }}-{{ hadoop_version }}/bin/yarn resourcemanager
 StandardOutput=journal
 StandardError=journal
 Restart=always
